<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="7dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/cardview_default_elevation">


            <RelativeLayout
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@null"
                    android:transitionName="img"
                    android:adjustViewBounds="true"
                    tools:src="@tools:sample/backgrounds/scenic"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@id/img"
                    android:contentDescription="@null"
                    android:src="@drawable/bottom_shadow" />

                <ProgressBar
                    android:id="@+id/progress_load_photo"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp" />


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/title"
                    android:textColor="@color/colorTextTitle"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/source"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_below="@id/title"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/source"
                    android:textColor="@color/colorTextTitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_below="@id/title"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/time" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>

