<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_coordin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/MyAppBarLayoutTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="img"
                    android:contentDescription="@null"
                    app:layout_collapseMode="parallax"
                    tools:ignore="UnusedAttribute" />

                <RelativeLayout
                    android:id="@+id/headerContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/top_shadow" />

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@id/img"
                        android:layout_alignParentBottom="true"
                        android:scaleType="centerCrop"
                        android:contentDescription="@null"
                        android:src="@drawable/bottom_shadow" />

                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:contentInsetStart="0dp"
                    android:contentInsetLeft="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="@dimen/cardview_default_elevation"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/txt_source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/source_of_news"

                            android:textColor="@color/colorTextTitle"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/title_of_news"
                            android:textColor="@color/colorTextTitle"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/description_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"
                            android:maxLines="2"
                            android:text="@string/description"
                            android:textColor="@color/colorTextTitle"
                            android:textSize="15sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/bttn_read_more"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/read_more" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>